{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 35,
  "lineage": "1bfdbbb2-78af-cc66-92b6-8024899e8ba0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/networkInterfaces/xper-cp701-server-0-nic",
            "internal_domain_name_suffix": "md11tjt2wp4u5f0nhnyslpf2ja.frax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "xper-cp701-server-0-nic-config",
                "primary": true,
                "private_ip_address": "10.10.68.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/publicIPAddresses/xper-cp701-server-0-public-ip",
                "subnet_id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/virtualNetworks/xper-cp701-vnet/subnets/xper-cp701-subnet"
              }
            ],
            "location": "germanywestcentral",
            "name": "xper-cp701-server-0-nic",
            "private_ip_address": "10.10.68.4",
            "private_ip_addresses": [
              "10.10.68.4"
            ],
            "resource_group_name": "xper-cp701-rg",
            "tags": {
              "Environment": "Bosch CI PoC",
              "Owner_Email": "perry@confluent.io",
              "Owner_Name": "Perry Krol"
            }
          },
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/networkSecurityGroups/xper-cp701-nsg",
            "location": "germanywestcentral",
            "name": "xper-cp701-nsg",
            "resource_group_name": "xper-cp701-rg",
            "security_rule": [],
            "tags": {
              "Environment": "Bosch CI PoC",
              "Owner_Email": "perry@confluent.io",
              "Owner_Name": "Perry Krol"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "c3_sr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/networkSecurityGroups/xper-cp701-nsg/securityRules/HTTP80",
            "name": "HTTP80",
            "network_security_group_name": "xper-cp701-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "xper-cp701-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "connect_sr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8083",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/networkSecurityGroups/xper-cp701-nsg/securityRules/HTTP8083",
            "name": "HTTP8083",
            "network_security_group_name": "xper-cp701-nsg",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "xper-cp701-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ksqldb_sr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8088",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/networkSecurityGroups/xper-cp701-nsg/securityRules/HTTP8088",
            "name": "HTTP8088",
            "network_security_group_name": "xper-cp701-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "xper-cp701-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_sr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/networkSecurityGroups/xper-cp701-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "xper-cp701-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "xper-cp701-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/publicIPAddresses/xper-cp701-server-0-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.113.35.215",
            "ip_version": "IPv4",
            "location": "germanywestcentral",
            "name": "xper-cp701-server-0-public-ip",
            "resource_group_name": "xper-cp701-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Bosch CI PoC",
              "Owner_Email": "perry@confluent.io",
              "Owner_Name": "Perry Krol"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.10.68.0/24",
            "address_prefixes": [
              "10.10.68.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/virtualNetworks/xper-cp701-vnet/subnets/xper-cp701-subnet",
            "name": "xper-cp701-subnet",
            "resource_group_name": "xper-cp701-rg",
            "virtual_network_name": "xper-cp701-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a6b9f760-b37c-4ffd-974d-3b7125bcbc48",
            "id": "/subscriptions/54ff81a0-e7f6-4919-9053-4cdd1c5f5ae1/resourceGroups/xper-cp701-rg/providers/Microsoft.Network/virtualNetworks/xper-cp701-vnet",
            "location": "germanywestcentral",
            "name": "xper-cp701-vnet",
            "resource_group_name": "xper-cp701-rg",
            "tags": {
              "Environment": "Bosch CI PoC",
              "Owner_Email": "perry@confluent.io",
              "Owner_Name": "Perry Krol"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}